I put photos and theory

--- a/wiedza.html
+++ b/wiedza.html
@@ -79,11 +79,9 @@
 				<div class="row">
 					<div class="col-xs-12 text-right">
 						
-						<p class="num">Call: +01 123 456 7890</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
@@ -99,7 +97,17 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="wiedza.html">O raku jajnika</a></li>
+							<li class="active has-dropdown">
+								<a href="wiedza.html">O raku jajnika</a>
+								<ul class="dropdown">
+									<li><a href="#">Czym jest rak jajnika?</a></li>
+									<li><a href="#">Kto jest w grupie ryzyka?</a></li>
+									<li><a href="#">Objawy</a></li>
+									<li><a href="#">Typy</a></li>
+									<li><a href="#">Profilaktyka</a></li>
+									<li><a href="#">Chemioterapia</a></li>
+								</ul>
+							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
@@ -125,14 +133,13 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_4.jpg);">
+		   	<li style="background-image: url(images/o_raku.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
 			   					<h1 class="heading-section">Poznaj niewidocznego wroga</h1>
-									<h2>Anatomia jajnika, czynniki ryzyka, objawy oraz rodzaje raka- cała wiedza w pigułce.	</a></h2>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -142,84 +149,70 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-course">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Our Course</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-1.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Web Master</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-2.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Business &amp; Accounting</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-3.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Science &amp; Technology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-4.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Health &amp; Psychology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-5.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Science &amp; Technology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-6.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Health &amp; Psychology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<body>
+
+<div style="text-align: left; margin: 0 20%;">
+    <h2 style="color:rgb(234, 138, 219);">Czym jest rak jajnika?</h2>
+    <p>Rak jajnika obejmuje nowotwory, które rozpoczynają się w jajnikach, jajowodach i błonie jamy brzusznej (otrzewnej). Lekarze używają testów obrazowych i badają tkanki, aby określić, gdzie rak się zaczął. Nowotwory, które zaczynają się w tych trzech obszarach, zachowują się podobnie i są leczone podobnie, dlatego grupuje się je jako rak jajnika. Zdrowe komórki rosną, dzielą się i umierają w kontrolowanym procesie. Komórki nowotworowe są inne, ponieważ:</p>
+    <ul>
+        <li>Rosną niekontrolowanie i dzielą się na nowe, nieprawidłowe komórki</li>
+        <li>Przeżywają dłużej niż komórki normalne</li>
+        <li>Prowadzą do wzrostu guza</li>
+        <li>Mogą rozprzestrzeniać się (przerzutować) do innych części ciała</li>
+    </ul>
+
+    <p> Rak jajnika to nowotwór ginekologiczny, który zaczyna się w jajnikach. Rak jajnika ma wiele różnych typów, które można podzielić na różne podtypy. Główne typy obejmują:</p>
+    <ul>
+        <li>Raki nabłonkowe jajnika</li>
+        <li>Raki zarodkowe jajnika</li>
+        <li>Raki komórek mezodermalnych jajnika</li>
+    </ul>
+
+    <p>Kiedy rozpoznaje się raka jajnika, lekarz stara się ustalić, czy się rozprzestrzenił po całym ciele i jak daleko. Nazywa się to określaniem stopnia zaawansowania. Stopnie raka jajnika są numerowane od 1 do 4. Stopnie można również zapisywać jako I, II, III i IV. Każdy stopień można podzielić na mniejsze podstopnie, które dostarczają bardziej szczegółowych informacji na temat raka.</p>
+
+    <p>Oprócz raka jajnika, inne nowotwory ginekologiczne obejmują:</p>
+    <ul>
+        <li>Rak szyjki macicy: Nowotwór, który zaczyna się w szyjce macicy, łączącej pochwę z górną częścią macicy. Rak szyjki macicy to jedyny nowotwór ginekologiczny, który można badać w celu próby zapobieżenia.</li>
+        <li>Rak macicy: Nowotwór, który zaczyna się w macicy (macicy). Macica to narząd w kształcie gruszki w miednicy kobiety. Macica to miejsce, gdzie rośnie dziecko podczas ciąży.</li>
+        <li>Rak pochwy: Nowotwór, który zaczyna się w pochwie. Pochwa nazywana jest także kanałem porodowym. Jest to pusty, rurkowaty kanał, przez który przechodzi dziecko podczas porodu.</li>
+        <li>Rak sromu: Nowotwór, który rozwija się w sromie, zewnętrznej części narządów płciowych kobiecych. Srom obejmuje wejście do pochwy, zewnętrzne wargi sromowe (labia majora i labia minora) oraz łechtaczkę.</li>
+    </ul>
+
+    <h2 style="color:rgb(234, 138, 219);">Gdzie znajdują się jajniki?</h2>
+    <p>Jajniki to dwa małe, migdałowate narządy w miednicy, dolnej części między biodrami. Znajdują się po obu stronach macicy. Jajniki przechowują jajka i wytwarzają żeńskie hormony estrogen i progesteron.</p>
+
+    <p>Jajnik składa się z trzech rodzajów komórek:</p>
+    <ul>
+        <li>Komórki nabłonkowe pokrywają powierzchnię jajnika. Pokrywają również jajowody.</li>
+        <li>Komórki zarodkowe są komórkami rozrodczymi jajników. Są również nazywane komórkami jajowymi lub oocytami.</li>
+        <li>Komórki mezodermalne tworzą pewne rodzaje tkanki łącznej. Produkują estrogen i progesteron.</li>
+    </ul>
+
+    <p>Najczęstszy typ raka jajnika zaczyna się w komórkach nabłonkowych. Stanowi to około 85% do 90% wszystkich przypadków raka jajnika. Raki komórek jajowych i rak mezodermalnych są rzadsze.</p>
+
+    <h2 style="color:rgb(234, 138, 219);">Co powoduje raka jajnika?</h2>
+    <p>Dokładna przyczyna raka jajnika jest nieznana. Istnieje wiele koncepcji na temat tego, co powoduje chorobę. Rak jajnika zaczyna się, gdy DNA komórek jajników ulega mutacji. DNA zawiera instrukcje, które mówią komórce, co robić. Gdy DNA ulega mutacji, mówi komórkom, aby szybko rosły i się mnożyły. Powstaje masowa ilość komórek nowotworowych, które nadal rosną, podczas gdy zdrowe komórki umierają.</p>
+
+    <p>Niewielka liczba nowotworów jajnika występuje u osób, które odziedziczyły mutacje powiązane ze zwiększonym ryzykiem. Należą do nich mutacje w genach BRCA1 i BRCA2. Geny te zwykle chronią przed zachorowaniem na niektóre nowotwory. Mutacje w tych genach uniemożliwiają im prawidłowe działanie. Jeśli odziedziczysz te mutacje, istnieje większe ryzyko zachorowania na niektóre nowotwory.
+
+		Mutacje nabyte to mutacje genów, które pojawiają się w ciągu życia człowieka. Przyczyna większości nabytych mutacji jest obecnie nieznana. Jednak większość nowotworów jajnika ma kilka nabytych mutacji, w tym TP53, PTEN i PALB2. Chociaż nie jest znany sposób zapobiegania rakowi jajnika, istnieją pewne rzeczy, które mogą zmniejszyć ryzyko, w tym: </p>
+		<ul>
+		<li>Ciąża</li>
+		<li>Tabletki antykoncepcyjne</li>
+		<li>Podwiązanie jajowodów</li>
+		<li>Usunięcie macicy</li>
+	</ul>	
+	<h2 style="color:rgb(234, 138, 219);">Jak diagnozuje się raka jajnika?</h2>
+	<p>Nie istnieje test wczesnego wykrywania ani skuteczne narzędzie przesiewowe do identyfikacji raka jajnika. Jedynym skutecznym środkiem diagnostycznym jest przeprowadzenie operacji, podczas której lekarz może przeprowadzić biopsję w celu pobrania tkanki z guza. Patolog analizuje te tkanki, aby ustalić obecność raka. W przypadku wystąpienia objawów lub podejrzeń dotyczących raka jajnika istnieją jednak badania, które mogą pomóc w postawieniu diagnozy. Te procedury obejmują:</p>
+		<ul>
+		<li>Badanie miednicy: Lekarz sprawdza powiększenie jajnika lub obecność płynu w jamie brzusznej poprzez badanie macicy, pochwy, jajników, pęcherza moczowego i odbytnicy w poszukiwaniu nietypowych zmian, takich jak guzy.</li>	
+		<li>SG przezpochwowe: To badanie wykorzystuje mały instrument umieszczony w pochwie do wizualizacji jajników i macicy. Stosuje się je u osób zwiększonym ryzykiem raka jajnika lub u tych, u których stwierdzono nieprawidłowości w badaniu miednicy.</li>	
+		<li>Badanie krwi CA-125: Pomiar poziomu białka CA-125, które występuje w wyższych stężeniach u osób z rakiem jajnika lub jajowodu. Ważne jest zrozumienie, że poziom CA-125 może wzrosnąć z powodu innych schorzeń, niekoniecznie związanych z rakiem jajnika.</li>	
+		</ul>
+	<h2 style="color:rgb(234, 138, 219);">Jakie są rokowania w przypadku raka jajnika?</h2>	
+	<p>Perspektywy w przypadku raka jajnika są bardzo zróżnicowane, ponieważ każda osoba reaguje inaczej na leczenie, a wyniki są uzależnione od wielu czynników. Wskaźniki przeżycia stanowią ogólną ocenę, pokazującą, ile osób pozostaje przy życiu w określonym okresie po rozpoznaniu lub rozpoczęciu leczenia, zazwyczaj przez pięć lat. Warto podkreślić, że wskaźniki przeżycia to oszacowania, a nie pewne prognozy. W historii, wskaźnik pięcioletniego przeżycia dla raka jajnika w stadium I wynosił ponad 95%. Jednak te wskaźniki różnią się w zależności od rodzaju raka jajnika, przy czym niektóre nowotwory są bardziej agresywne niż inne, niezależnie od etapu diagnozy. Ostatnie badania kliniczne sugerują, że u niektórych kobiet zdiagnozowanych w późnych stadiach choroby prognozy są korzystne, co może wynikać z mniej agresywnego charakteru ich konkretnego nowotworu. Specjaliści nadal prowadzą badania w celu zrozumienia, dlaczego tak się dzieje.</p>
+</div>
+```
 
 	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
