--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
@@ -122,7 +121,7 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_1.jpg);">
+		   	<li style="background-image: url(images/czas.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
@@ -136,7 +135,7 @@
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_2.jpg);">
+		   	<li style="background-image: url(images/macica.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
@@ -150,7 +149,7 @@
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_3.jpg);">
+		   	<li style="background-image: url(images/kobiety.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
@@ -277,21 +276,21 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6 text-center animate-box">
 							<span class="icon"><i class="icon-world"></i></span>
-							<span class="fh5co-counter js-counter" data-from="0" data-to="3297" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Foreign Followers</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="25150" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Ocalone Kobiety</span>
 						</div>
 						<div class="col-md-3 col-sm-6 text-center animate-box">
-							<span class="icon"><i class="icon-study"></i></span>
-							<span class="fh5co-counter js-counter" data-from="0" data-to="3700" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Students Enrolled</span>
+							<span class="icon"><i class="icon-book2"></i></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="1200000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Dystrybucja Materiałów Edukacyjnych</span>
 						</div>
 						<div class="col-md-3 col-sm-6 text-center animate-box">
-							<span class="icon"><i class="icon-bulb"></i></span>
-							<span class="fh5co-counter js-counter" data-from="0" data-to="5034" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Classes Complete</span>
+							<span class="icon"><i class="icon-lab2"></i></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="2100000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Badania</span>
 						</div>
 						<div class="col-md-3 col-sm-6 text-center animate-box">
-							<span class="icon"><i class="icon-head"></i></span>
+							<span class="icon"><i class="icon-heart-outline"></i></span>
 							<span class="fh5co-counter js-counter" data-from="0" data-to="1080" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Certified Teachers</span>
 						</div>
