--- a/wsparcie.html
+++ b/wsparcie.html
@@ -78,12 +78,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						
-						<p class="num">Call: +01 123 456 7890</p>
-						<ul class="fh5co-social">
+							<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
@@ -125,7 +122,7 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_4.jpg);">
+		   	<li style="background-image: url(images/wsparcie.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
