I developed one page more and changed sizer od images

--- a/diagnoza.html
+++ b/diagnoza.html
@@ -122,14 +122,13 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_4.jpg);">
+		   	<li style="background-image: url(images/diagnoza.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">Our Faculty</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+			   					<h1 class="heading-section">Diagnoza to pierwszy krok do walki</h1>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -139,128 +138,57 @@
 	  	</div>
 	</aside>
 	
+	
+    </div>
 	<div id="fh5co-staff">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 text-center">
 					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-1.jpg);">
+						<div class="staff-img" style="background-image: url(images/wywiad.jpg);">
 							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
+								<li><a href="#">Wczesna diagnoza zwiększa szanse na skuteczne leczenie. Nie ignoruj objawów - wizyta u lekarza może zrobić różnicę.</i></a></li>
 							</ul>
 						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
+						<h3><a href="#">Konsultacja i Wywiad</a></h3>
+						<p>Rozpoczyna się od szczegółowej rozmowy z pacjentką w celu zrozumienia jej objawów, historii zdrowia oraz czynników ryzyka.</p>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box text-center">
 					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-2.jpg);">
+						<div class="staff-img" style="background-image: url(images/USG.jpg);">
 							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
+								<li><a href="#">Badania obrazowe są istotne w ocenie stopnia zaawansowania raka jajnika, pomagając określić, czy nowotwór rozprzestrzenił się poza jajniki.</i></a></li>
 							</ul>
 						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
+						<h3><a href="#">Badania Obrazowe</a></h3>
+						<p>Wykorzystuje się ultrasonografię, tomografię komputerową (TK) lub rezonans magnetyczny (MRI) do uzyskania obrazów narządów miednicy.</p>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box text-center">
 					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-3.jpg);">
+						<div class="staff-img" style="background-image: url(images/biopsja.jpg);">
 							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
+								<li><a href="#">Biopsja pomaga ustalić, czy podejrzewane zmiany w jajnikach są rzeczywiście nowotworowe. To kluczowy etap w planowaniu leczenia i określaniu prognozy.</i></a></li>
 							</ul>
 						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
+						<h3><a href="#">Markery i Biopsja</a></h3>
+						<p>Oznaczanie markerów nowotworowych, takich jak CA-125 oraz w razie potrzeby, przeprowadzenie biopsji, pobierając próbkę tkanki dla badania histopatologicznego.</p>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box text-center">
 					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-1.jpg);">
+						<div class="staff-img" style="background-image: url(images/diagnoza_ocena.jpg);">
 							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
+								<li><a href="#">Ostateczna diagnoza jest wynikiem współpracy różnych specjalistów, takich jak onkolog, radiolog i patolog. To zespołowe podejście pozwala na trafniejsze diagnozy.</i></a></li>
+								
 							</ul>
 						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
+						<h3><a href="#">Ocena i Diagnoza</a></h3>
+						<p>Lekarze analizują wyniki badań obrazowych, markerów nowotworowych i histopatologii i na podstawie tych danych formułują ostateczną diagnozę i decydują o dalszym planie leczenia.</p>
 					</div>
 				</div>
-				<div class="col-md-3 animate-box text-center">
-					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-1.jpg);">
-							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
-							</ul>
-						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
-					</div>
-				</div>
-				<div class="col-md-3 animate-box text-center">
-					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-3.jpg);">
-							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
-							</ul>
-						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
-					</div>
-				</div>
-				<div class="col-md-3 animate-box text-center">
-					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-2.jpg);">
-							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
-							</ul>
-						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
-					</div>
-				</div>
-				<div class="col-md-3 animate-box text-center">
-					<div class="staff">
-						<div class="staff-img" style="background-image: url(images/staff-3.jpg);">
-							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
-							</ul>
-						</div>
-						<span>Health Teacher</span>
-						<h3><a href="#">Mike Smith</a></h3>
-						<p>Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.</p>
-					</div>
+			
 				</div>
 			</div>
 		</div>
@@ -271,11 +199,9 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Get 400 of Online wiedza for Free</h2>
-					<h3>By Mike Smith</h3>
+					<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
 					<div class="simply-countdown simply-countdown-one"></div>
-					<p><strong>Limited Offer, Hurry Up!</strong></p>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Register Now!</a></p>
+					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki :)!</a></p>
 				</div>
 			</div>
 		</div>
